# jsonschema-transpiler

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  setup.py
.circleci/: config.yml
.github/workflows/: build.yml
docs/: development.md  examples.md
scripts/: README.md  download-mps.sh  download-sampled-landfill.py  format-tests.py  generate-avro.py  mps-download-sampled-data.py  mps-download-schemas.sh  mps-generate-avro-data-helper.py  mps-generate-avro-data.sh  mps-generate-avro-schemas.sh  mps-generate-schemas.sh  mps-load-avro-bq.sh  mps-validate-avro-schemas.py  mps-verify-nested-list.sh  mps-verify-tuple-struct.sh  test-mps-generate-avro.sh  test-mps-valid-avro.py  test-mps.sh
src/: ast.py  ast.rs  avro.rs  bigquery.rs  casing.rs  cli.py  jsonschema.rs  lib.rs  main.rs  synthesis.py  traits.rs  transpile.py
tests/: allof.rs  array.rs  atomic.rs  avro.rs  avro_atomic.rs  avro_map.rs  avro_object.rs  avro_oneof.rs  bigquery.rs  bigquery_allof.rs  bigquery_array.rs  bigquery_atomic.rs  bigquery_map.rs  bigquery_object.rs  bigquery_oneof.rs  enforce_nullable.rs  force_nullable.rs  map.rs  normalize_case.rs  object.rs  oneof.rs  resolve_method.rs  test_allof.py  test_array.py  test_atomic.py  test_map.py  test_object.py  test_oneof.py  transpile_avro.rs  transpile_bigquery.rs  tuple_struct.rs
tests/python/: test_allof.py  test_object.py
tests/resources/: allof.json  array.json  atomic.json  map.json  object.json  oneof.json
tests/resources/translate/: array.json  atomic.json  json_column.json  map.json  object.json  tuple.json
web/: README.md  package-lock.json  package.json  rollup.config.js
web/public/: index.html
web/src/: App.svelte
