[package]
name = "jsonschema-transpiler"
version = "1.8.1"
authors = ["Anthony Miyaguchi <amiyaguchi@mozilla.com>"]
description = "A tool to transpile JSON Schema into schemas for data processing"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/mozilla/jsonschema-transpiler"
edition = "2018"

[lib]
name = "jst"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = "~2.32"
env_logger = "0.6.1"
log = "0.4"
regex = "1"
heck = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.3.0"
maplit = "1.0.2"
wasm-bindgen = {version = "0.2.69", features = ["serde-serialize"]}
console_error_panic_hook = { version = "0.1.6", optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
