[package]
authors = ["Anthony Miyaguchi <amiyaguchi@mozilla.com>"]
description = "A tool to transpile JSON Schema into schemas for data processing"
edition = "2018"
license = "MPL-2.0"
name = "jsonschema-transpiler"
readme = "README.md"
repository = "https://github.com/mozilla/jsonschema-transpiler"
version = "1.10.0"

[lib]
name = "jst"

[dependencies]
clap = "~2.32"
env_logger = "0.6.1"
heck = "0.3.3"
lazy_static = {version = "1.3.0", optional = true}
log = "0.4"
maplit = "1.0.2"
onig = {version = "4.3", optional = true}
regex = "1.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
oniguruma = ["onig", "lazy_static"]
