[package]
authors = ["Anthony Miyaguchi <amiyaguchi@mozilla.com>"]
description = "A tool to transpile JSON Schema into schemas for data processing"
edition = "2021"
license = "MPL-2.0"
name = "jsonschema-transpiler"
readme = "README.md"
repository = "https://github.com/mozilla/jsonschema-transpiler"
version = "2.0.0"

[lib]
name = "jst"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10.0"
heck = "0.4.1"
lazy_static = {version = "1.3.0", optional = true}
log = "0.4"
maplit = "1.0.2"
onig = {version = "6.4", optional = true}
regex = "1.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
oniguruma = ["onig", "lazy_static"]
